--- a/LHLF-PCA/LHLF-PCA3.ipynb
+++ b/LHLF-PCA/LHLF-PCA3.ipynb
@@ -20,6 +20,7 @@
     "from skimage.feature import hog\n",
     "from skimage import exposure\n",
     "from tensorflow.keras.models import Model\n",
+    "#Defining features to extract
     "def extract_features_from_directory(directory, vgg16_target_size=(224, 224),hog_pixels_per_cell=(8, 8)):\n",
     "    vgg16_features = []\n",
     "    hog_features = []\n",
